package Strategy_pattern;

public interface Batsman {
    void bat();

}