package Strategy_pattern;

public interface Bowler {
    void bowl();

}
