package Strategy_pattern;

public class FastBowler implements Bowler{

    @Override
    public void bowl() {
        System.out.println("Role in team: fast bowler");

    }
}
