package Strategy_pattern;

public class MiddleOrderBatsman implements Batsman{
    @Override
    public void bat() {
        System.out.println("Role in team: Middle Order Batsman");
    }
}
