package Strategy_pattern;

public class SpinBowler implements Bowler{

    @Override
    public void bowl() {
        System.out.println("Role in a team: Spin Bowler");

    }
}




