package Strategy_pattern;

public class TopOrderBatsman implements Batsman {

    @Override
    public void bat() {
        System.out.println("Role in a team: Top Order Batsman");

    }
}
